--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,13 @@ comm==0.2.2
 debugpy==1.8.6
 decorator==5.1.1
 defusedxml==0.7.1
+distro==1.9.0
 executing==2.1.0
 fastjsonschema==2.20.0
 fqdn==1.5.1
 gitdb==4.0.11
 GitPython==3.1.41
+grandalf==0.8
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
@@ -33,6 +35,7 @@ ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.5.0
 json5==0.9.25
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -52,6 +55,7 @@ jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kenkenpa==0.1.3
 langchain-core==0.3.7
+langchain-openai==0.2.1
 langgraph==0.2.32
 langgraph-checkpoint==2.0.0
 langsmith==0.1.129
@@ -65,6 +69,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.2.2
 notebook_shim==0.2.4
+openai==1.51.0
 orjson==3.10.7
 overrides==7.7.0
 packaging==24.1
@@ -83,11 +88,13 @@ pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
+regex==2024.9.11
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -101,8 +108,10 @@ soupsieve==2.6
 stack-data==0.6.3
 tenacity==8.5.0
 terminado==0.18.1
+tiktoken==0.7.0
 tinycss2==1.3.0
 tornado==6.4.1
+tqdm==4.66.5
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
